added delete function
